Fix text spacing, add list of collaborators

--- a/app/sass/custom_styles.sass
+++ b/app/sass/custom_styles.sass
@@ -207,14 +207,14 @@ a
   font-size: 0.85em
   margin-bottom: 0
   margin-top: 0.3em
-  word-spacing: 0.6em
+  word-spacing: 0.1em
 
 .techs-used
   display: inline-block
   font-size: 0.85em
   margin-bottom: 0
   margin-top: 0.3em
-  word-spacing: 0.6em
+  word-spacing: 0.1em
   margin-right: 0.5em
 
 .techs-list
